# mba-ia-desafio-ingestao-busca

./: .cursorrules  .env.example  .flake8  .gitignore  GEMINI_UPDATE.md  Makefile  README.md  README_EN.md  README_LOCAL_EXECUTION.md  __init__.py  chat.sh  docker-compose.yml  ingest.sh  list.sh  pyproject.toml  pytest.ini  requirements.txt  search.sh  setup.sh  start_chat.py  status.sh  test_chat.py  test_gemini.py  test_search_integration.py
docker/postgres/init/: 01-init-vector.sql
docs/: API.md  CHUNKING.md
docs/agents/dependency-auditor/: dependencies-report-2025-11-05-12:00:00.md
docs/development/: implementation-plan.md
src/: chat.py  chat_local.py  config.py  ingest.py  ingest_local.py  search.py  search_local.py  setup.py  util.py  utils.py
src/config/: ai_service_selector.py  database.py  settings.py  validator.py
src/core/domain/: chunk.py  document.py
src/core/interfaces/: document_repository.py  embedding_service.py  llm_service.py
src/core/use_cases/: ingest_pdf.py  search_documents.py
src/infrastructure/services/: gemini_embedding_service.py  gemini_llm_service.py  openai_embedding_service.py  openai_llm_service.py  pdf_loader_service.py
src/infrastructure/text_processing/: chunker.py
src/presentation/cli/: interface.py
src/presentation/prompts/: search_prompt.py
tests/integration/: test_end_to_end_workflows.py
tests/performance/: test_vector_search_performance.py
tests/unit/: test_cli.py  test_config.py  test_database.py  test_document_repository.py  test_embedding_services.py  test_llm_services.py  test_pdf_processing.py
(+3 files in other folders)
